--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,18 @@ body {
   font-size: 16px;
   font-weight: 300; }
 
+ /* img {
+    float: left;
+    width:  100px;
+    height: 100px;
+    object-fit: cover;
+}*/
+
+#logo {
+  border-radius: 50%; 
+  height: 200px;
+}
+
   #title{
     color:darkdarkblue;
   }
@@ -453,8 +465,8 @@ a {
 .image {
   opacity: 1;
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 100px;
+  height: 100px;
   -webkit-transition: .5s ease;
   -o-transition: .5s ease;
   transition: .5s ease;
